--- a/careers.html
+++ b/careers.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   History
+   ESI Asia Pacific Pty Ltd
   </title>
   <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
@@ -20,7 +20,7 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-no-background">
+  <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
      <span class="navbar-toggler-icon">
@@ -148,77 +148,84 @@
     </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-   <header class="banner-history header">
-   </header>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col">
+      <h1>
+       Connect with
+      </h1>
+      <h1>
+       us today!
+      </h1>
+      <h1>
+       — today
+      </h1>
+     </div>
+    </div>
+   </div>
   </header>
-  <main class="content-block history">
-   <div class="text-column">
+  <main class="content-block">
+   <div class="environment-header">
     <h1>
-     HISTORY
+     Careers
     </h1>
     <p>
-     Established in 2020, ESI Asia Pacific Pty Ltd. manufactures low-cost, long-duration iron flow batteries for commercial and
-            utility-scale energy storage applications requiring 6+ hours of flexible energy capacity. Our long-duration
-            energy storage platforms, the Energy Warehouse™ (EW) and Energy Center (EC), use iron, salt, and water
-            for
-            the electrolyte, and deliver an environmentally safe, long-life energy storage solution for the world's
-            renewable energy infrastructure.
+     When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.
     </p>
     <p>
-     Based in Queensland, Australia, we have extensive experience in electricity markets, renewable energy, manufacturing, electrical installations and services and trading in energy markets worldwide. .
+     Longer-term, we have significant export ambitions — to be a provider of large-scale and small, modular distributed energy storage solutions to the Pacific Islands and South East Asia.
     </p>
     <p>
-     Our technology delivers environmental and cost advantages. Specifically, our non-corrosive, non-toxic
-            chemistry enables use of off-the-shelf materials. Its non-flammable composition eliminates costly fire
-            suppression systems. Combined with an innovative cell design, our customers benefit from increased power
-            density and reduced O&amp;M cost over our platform's 20+ year lifespan.
-    </p>
-    <p>
-     With its safe, earth-abundant, proven all-iron flow battery technology, ESS is helping project developers,
-            utilities, and EPCs make the transition to more flexible non-lithium-ion storage that is better suited for
-            the grid and the environment.
+     If you are interested to work for ESI, please
+     <a href="/contact">
+      contact us
+     </a>
+     .
     </p>
    </div>
   </main>
-  <footer>
-   <section class="contact">
-    <div class="footer-information">
-     <a class="footer-logo" href="/">
-      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-     </a>
-     <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
-      </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
-     </div>
-    </div>
-   </section>
-   <section class="footer-background">
-    <div class="footer navbar-expand-lg navbar">
-     <span class="mr-auto">
-      © 2022 All rights reserved.
-     </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
-    </div>
-   </section>
-  </footer>
  </body>
 </html>
+<footer>
+ <section class="contact">
+  <div class="footer-information">
+   <a class="footer-logo" href="/">
+    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+   </a>
+   <div class="footer-contacts">
+    <h4 class="contact-text">
+     CONTACT
+    </h4>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      room
+     </i>
+     <p class="ml-2">
+      Brisbane, Australia
+     </p>
+    </div>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      mail
+     </i>
+     <p class="ml-2">
+      info@esiap.com.au
+     </p>
+    </div>
+   </div>
+  </div>
+ </section>
+ <section class="footer-background">
+  <div class="footer navbar-expand-lg navbar">
+   <span class="mr-auto">
+    © 2022 All rights reserved.
+   </span>
+   <a class="footer-icon-container" href="https://twitter.com/ess_info">
+    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+   </a>
+  </div>
+ </section>
+</footer>
