--- a/chemistry.html
+++ b/chemistry.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Applications
+   ESI Asia Pacific Pty Ltd
   </title>
   <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
@@ -20,7 +20,7 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-no-background">
+  <header class="banner banner-product header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
      <span class="navbar-toggler-icon">
@@ -148,88 +148,62 @@
     </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-   <header class="banner-applications header">
-   </header>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col">
+      <h1>
+       Energy when you
+       <br/>
+       need it most
+      </h1>
+     </div>
+    </div>
+   </div>
   </header>
   <main class="content-block">
-   <div class="banner-text banner-text-applications">
+   <div class="text-column chemistry-header">
     <h1>
-     Utilities
+     Technology Overveiw
     </h1>
    </div>
    <div class="text-column">
-    <h1 style="text-align: center">
-     HELPING UTILITIES REAP THE REWARDS OF RENEWABLE ENERGY
-    </h1>
     <p>
-     At ESI Asia Pacific Pty Ltd., we're encouraged by the increased amount of renewable energy penetration across the grid. We
-            know that, with wind and solar energy storage deployments growing up to 46% year-over-year, electric
-            utilities need alternatives to lithium-ion that are clean, resilient and have long operating lifetimes and
-            are not cycle limited. Our iron flow battery solutions, the Energy Warehouse™ (EW) and Energy
-            Center™ (EC) offer more than double the operating lifetime and cycle capacity of lithium-ion battery
-            storage systems, with a non-flammable chemistry and minimal maintenance requirements.
-    </p>
-    <p>
-     The EC™ is a "battery-in-a-building" platform based on the same second generation power module used in
-            the EW™ with a design approach that enables systems to be tailored to meet virtually any project size
-            with storage durations ranging up to 16+ hours. Its wide-ranging capabilities can help utilities deal with
-            high penetration of intermittent renewables, resiliency requirements and defer major capital expenditures on
-            distribution equipment by time shifting energy. Utilities can easily communicate with ESI Asia Pacific Pty Ltd's storage
-            system solutions installed at end-user sites to dynamically manage customer electricity consumption from the
-            grid in response to real-time electricity supplies. Our innovative energy storage solutions also help with
-            frequency regulation and other ancillary services and, furthermore, can reduce a utility's dependence on
-            fossil fuel generation plants, shifting to a more sustainable model over time.
+     The DESS technology chosen is from ESS,Inc (NYSE:GWH) a Portland, US based company, producing an Iron-  Flow battery. The device consists of iron, salt and water chemistry and can _be either deployed in containers or  in a large scale grid connected warehouse.
     </p>
    </div>
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Commercial &amp; Industrial (C&amp;I)
-    </h1>
+   <div class="text-column chemistry-header">
+    <h3>
+     Iron Chloride Flow Battery
+    </h3>
    </div>
    <div class="text-column">
-    <h1 style="text-align: center">
-     CLEAN ENERGY STORAGE SHIFTS THE POWER INTO YOUR HANDS
-    </h1>
+    <ul>
+     <li>
+      Also known as Redox Flow Battery (reduction-oxidation)
+     </li>
+     <li>
+      Electrochemical storage device with unlimited charge/discharge cycles
+     </li>
+     <li>
+      Electrical energy drives chemical change in the electrolyte, which flows through electrochemical cell
+     </li>
+    </ul>
     <p>
-     Energy is a significant operating expense that needs to be minimized to improve a company's bottom line. At
-            ESI Asia Pacific Pty Ltd., we believe that proactively addressing this in a sustainable way is just smart business. If you're
-            looking to utilize renewable energy to support your brand and lower costs, long-duration energy storage may
-            be the solution for you. Whether it is managing the self-supply of intermittent solar or wind energy,
-            maximizing savings from existing utility tariffs for demand charges and time-of-use rates, or protecting
-            your facility's energy security from grid outages, an economical, long-duration energy storage solution can
-            give you control of your distributed energy resources.
-    </p>
-   </div>
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Off Grid &amp; Microgrid
-    </h1>
-   </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     SAFE, FLEXIBLE &amp; EFFICIENT ENERGY INDEPENDENCE FOR COMPANIES &amp; COMMUNITIES
-    </h1>
-    <p>
-     Many remote locations are forced to rely on power from diesel generators which comes with significant cost,
-            maintenance requirements, noise and negative environmental impact. Microgrids can help communities become
-            energy independent and in many cases more environmentally friendly. Renewables plus energy storage can act
-            as the baseload power source of a microgrid and reduce the use of costly fuel generators.
+     During charging:
     </p>
     <p>
-     As more remote locations move toward renewable energy adoption, our EW™ becomes an ideal solution for
-            renewables integration with minimal environmental impact. The EW™ can help reduce costs, and
-            sometimes save lives if used for a military setting, because it can be transported in a dry state and
-            activated on site by adding water.
+     \(\ce{Fe^{II}Cl2 + 2e- &lt;-&gt; Fe + 2Cl-}\) -0.44V (negative electrode)
     </p>
-    <br/>
-    <h1 style="text-align: center">
-     PV AND WIND SHIFTING
-    </h1>
     <p>
-     With long-duration storage, you can store excess renewables production and shift energy to when it has
-            greater economic value. Long-duration and multi-cycle energy storage can smooth and shift renewables towards
-            becoming the new baseload energy solution.
+     \(\ce{2Fe^{II}Cl2 + Cl- &lt;-&gt; 2Fe^{III}Cl3 + 2e-}\) +0.77V (positive electrode)
     </p>
+    <p>
+     During discharge: 	equations reverse
+    </p>
+    <img alt="Iron Flow Chemistry" class="img-fluid" src="images/Chemistry.jpg"/>
    </div>
   </main>
   <footer>
@@ -272,5 +246,17 @@
     </div>
    </section>
   </footer>
+  <!-- For browsers that do not support MathML: -->
+  <script>
+   window.MathJax = {
+      tex: {
+        // inlineMath: [['$', '$'], ['\\(', '\\)']],
+        packages: {'[+]': ['mhchem']}
+      },
+      loader: {load: ['[tex]/mhchem']},
+    };
+  </script>
+  <script async="" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
  </body>
 </html>
