--- a/index.html
+++ b/index.html
@@ -1,99 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ESI Asia Pacific Pty Ltd</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js" defer><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"
-            defer></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"
-            defer></script>
-    <script src="js/jquery.main.js" defer></script>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="/favicon.png">
-</head>
-<body>
-<header class="banner banner-homepage header">
-    <nav class="navbar navbar-expand-lg">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link btn" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/technology">Technology</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/applications">Applications</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link btn" href="/" data-toggle="dropdown">
-                    About Us
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item btn btn-sub" href="/history">History</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="banner-text">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="images/Home-Logo.png" alt="ESI Asia Pacific Pty Ltd">
-            </div>
-            <div class="col-md-6">
-                <h1>Our renewable<br/>energy future</h2>
-                <h2>- today</h2>
-            </div>
-        </div>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+  <title>
+   ESI Asia Pacific Pty Ltd
+  </title>
+  <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+  <script>
+   window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js" defer><\/script>')
+  </script>
+  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet"/>
+  <link href="css/main.css" rel="stylesheet"/>
+    <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+  </script>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <link href="/favicon.png" rel="icon"/>
+ </head>
+ <body>
+  <header class="banner banner-homepage header">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+     <span class="navbar-toggler-icon">
+     </span>
+    </button>
+    <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/introduction">
+          Introduction
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/townsville">
+          Townsville
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/news">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
     </div>
-</header>
-<main class="content-block">
+    <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
+   </nav>
+   <div class="banner-text">
     <div class="row">
-        <div class="col-md-6">
-            <p>We provide reliable and environmentally friendly <strong>renewable energy storage solutions</strong> that are essential for <strong>Australia's transition to a renewable energy future.</strong></p>
-            <p>Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.</p>
-            <p>By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.</p>
-        </div>
-        <div class="col-md-6">
-            <img src="images/Home-Article.jpg"/>
-        </div>
+     <div class="col">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col">
+      <h1>
+       Our renewable
+       <br/>
+       energy future
+      </h1>
+      <h1>
+       — today
+      </h1>
+     </div>
     </div>
-</main>
-<footer>
-    <section class="contact">
-        <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESI Asia Pacific Pty Ltd"></a>
-            <div class="footer-contacts">
-                <h4 class="contact-text">CONTACT</h4>
-                <div class="icon-row">
-                    <i class="material-icons footer-contact-icon">room</i>
-                    <p class="ml-2">Brisbane, Australia</p>
-                </div>
-                <div class="icon-row">
-                    <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@esiap.com.au</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="footer-background">
-        <div class="footer navbar-expand-lg navbar">
-            <span class="mr-auto">&copy; 2021 All rights reserved.</span>
-            <a class="footer-icon-container" href="https://twitter.com/ess_info">
-                <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png">
-            </a>
-        </div>
-    </section>
-</footer>
-</body>
+   </div>
+  </header>
+  <main class="content-block">
+   <div class="row">
+    <div class="col-md-6">
+     <p>
+      We provide reliable and environmentally friendly
+      <strong>
+       renewable energy storage solutions
+      </strong>
+      that are essential for
+      <strong>
+       Australia's transition to a renewable energy future.
+      </strong>
+     </p>
+     <p>
+      Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
+     </p>
+     <p>
+      By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
+     </p>
+    </div>
+    <div class="col-md-6">
+     <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Article.jpg"/>
+    </div>
+   </div>
+  </main>
+  <footer>
+   <section class="contact">
+    <div class="footer-information">
+     <a class="footer-logo" href="/">
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+     </a>
+     <div class="footer-contacts">
+      <h4 class="contact-text">
+       CONTACT
+      </h4>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        room
+       </i>
+       <p class="ml-2">
+        Brisbane, Australia
+       </p>
+      </div>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        mail
+       </i>
+       <p class="ml-2">
+        info@esiap.com.au
+       </p>
+      </div>
+     </div>
+    </div>
+   </section>
+   <section class="footer-background">
+    <div class="footer navbar-expand-lg navbar">
+     <span class="mr-auto">
+      © 2022 All rights reserved.
+     </span>
+     <a class="footer-icon-container" href="https://twitter.com/ess_info">
+      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+     </a>
+    </div>
+   </section>
+  </footer>
+ </body>
 </html>
