--- a/board.html
+++ b/board.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Applications
+   ESI Asia Pacific Pty Ltd
   </title>
   <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
@@ -20,7 +20,7 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-no-background">
+  <header class="banner banner-about header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
      <span class="navbar-toggler-icon">
@@ -148,88 +148,75 @@
     </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-   <header class="banner-applications header">
-   </header>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col">
+      <h1>
+       Connect with
+      </h1>
+      <h1>
+       us today!
+      </h1>
+     </div>
+    </div>
+   </div>
   </header>
   <main class="content-block">
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Utilities
-    </h1>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+    </div>
    </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     HELPING UTILITIES REAP THE REWARDS OF RENEWABLE ENERGY
-    </h1>
-    <p>
-     At ESI Asia Pacific Pty Ltd., we're encouraged by the increased amount of renewable energy penetration across the grid. We
-            know that, with wind and solar energy storage deployments growing up to 46% year-over-year, electric
-            utilities need alternatives to lithium-ion that are clean, resilient and have long operating lifetimes and
-            are not cycle limited. Our iron flow battery solutions, the Energy Warehouse™ (EW) and Energy
-            Center™ (EC) offer more than double the operating lifetime and cycle capacity of lithium-ion battery
-            storage systems, with a non-flammable chemistry and minimal maintenance requirements.
-    </p>
-    <p>
-     The EC™ is a "battery-in-a-building" platform based on the same second generation power module used in
-            the EW™ with a design approach that enables systems to be tailored to meet virtually any project size
-            with storage durations ranging up to 16+ hours. Its wide-ranging capabilities can help utilities deal with
-            high penetration of intermittent renewables, resiliency requirements and defer major capital expenditures on
-            distribution equipment by time shifting energy. Utilities can easily communicate with ESI Asia Pacific Pty Ltd's storage
-            system solutions installed at end-user sites to dynamically manage customer electricity consumption from the
-            grid in response to real-time electricity supplies. Our innovative energy storage solutions also help with
-            frequency regulation and other ancillary services and, furthermore, can reduce a utility's dependence on
-            fossil fuel generation plants, shifting to a more sustainable model over time.
-    </p>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img alt="Peter Brindley" class="img-responsive" src="images/Brindley.png"/>
+    </div>
+    <div class="text-column our-team-text-column">
+     <h3>
+      Peter Brindley
+     </h3>
+     <h5>
+      Executive Chairman
+     </h5>
+     <p>
+      Peter has a wealth of senior executive experience, together with 20 years' board experience, with organisations such as Origin Energy, Lightsource BP, RACV, ICI, Dulux and Orica, within Australia, New Zealand and the UK. Gaining specialist expertise across industries from renewable energy and consumer services to health, aged care and superannuation.
+     </p>
+     <p>
+      With 25 years of general management experience, Peter moved into renewable energy in 2015 and was immediately drawn to the critical role this burgeoning sector has to play in addressing the climate change challenges. Leading Origin Energy's launch of battery storage, EV activities and solar maintenance services, Peter has been at the forefront of the growth in energy storage in Australia from those first early steps. Applying his deep strategic skills and capabilities in leading high-quality operational execution of new product categories, he understands the challenges and opportunities presented when new markets are opened up.
+     </p>
+     <p>
+      Peter is a non-executive director of Business Excellence Australia and past director of numerous organisations across health and aged care, chemicals, paints and superannuation.
+     </p>
+    </div>
    </div>
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Commercial &amp; Industrial (C&amp;I)
-    </h1>
-   </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     CLEAN ENERGY STORAGE SHIFTS THE POWER INTO YOUR HANDS
-    </h1>
-    <p>
-     Energy is a significant operating expense that needs to be minimized to improve a company's bottom line. At
-            ESI Asia Pacific Pty Ltd., we believe that proactively addressing this in a sustainable way is just smart business. If you're
-            looking to utilize renewable energy to support your brand and lower costs, long-duration energy storage may
-            be the solution for you. Whether it is managing the self-supply of intermittent solar or wind energy,
-            maximizing savings from existing utility tariffs for demand charges and time-of-use rates, or protecting
-            your facility's energy security from grid outages, an economical, long-duration energy storage solution can
-            give you control of your distributed energy resources.
-    </p>
-   </div>
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Off Grid &amp; Microgrid
-    </h1>
-   </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     SAFE, FLEXIBLE &amp; EFFICIENT ENERGY INDEPENDENCE FOR COMPANIES &amp; COMMUNITIES
-    </h1>
-    <p>
-     Many remote locations are forced to rely on power from diesel generators which comes with significant cost,
-            maintenance requirements, noise and negative environmental impact. Microgrids can help communities become
-            energy independent and in many cases more environmentally friendly. Renewables plus energy storage can act
-            as the baseload power source of a microgrid and reduce the use of costly fuel generators.
-    </p>
-    <p>
-     As more remote locations move toward renewable energy adoption, our EW™ becomes an ideal solution for
-            renewables integration with minimal environmental impact. The EW™ can help reduce costs, and
-            sometimes save lives if used for a military setting, because it can be transported in a dry state and
-            activated on site by adding water.
-    </p>
-    <br/>
-    <h1 style="text-align: center">
-     PV AND WIND SHIFTING
-    </h1>
-    <p>
-     With long-duration storage, you can store excess renewables production and shift energy to when it has
-            greater economic value. Long-duration and multi-cycle energy storage can smooth and shift renewables towards
-            becoming the new baseload energy solution.
-    </p>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img alt="Stuart Parry" class="img-responsive" src="images/Stuart.png"/>
+    </div>
+    <div class="text-column our-team-text-column">
+     <h3>
+      Stuart Parry
+     </h3>
+     <h5>
+      Director
+     </h5>
+     <p>
+      Stuart is an internationally experienced executive, lecturer and Chartered Accountant who has a depth of experience across a wide range of public sector and commercial areas including finance, procurement, risk management and strategy.
+     </p>
+     <p>
+      He has worked as an executive across funds management, financial management and financial accounting in Australia, the US and UK. Prior to establishing his own consultancy Stuart worked as a Chartered Accountant with leading global firms including Ernst &amp; Young, Prudential (UK) Wilhelmsen Investments and Brookfield Asset Management.
+     </p>
+     <p>
+      As an experienced member of international company group audit and risk committees, Stuart has a solid understanding of international finance and accounting issues. He has managed virtual teams focusing on strategic finance and accounting issues for major listed companies in Europe and North America.
+     </p>
+     <p>
+      Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce (Accounting and Economics) from the University of Queensland.
+     </p>
+     <p>
+     </p>
+    </div>
    </div>
   </main>
   <footer>
