--- a/contact.html
+++ b/contact.html
@@ -1,149 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js" defer><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"
-            defer></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"
-            defer></script>
-    <script src="js/jquery.main.js" defer></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script>
-        function onSubmit(token) {
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+  <title>
+   Contact Us
+  </title>
+  <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+  <script>
+   window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js" defer><\/script>')
+  </script>
+  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet"/>
+  <link href="css/main.css" rel="stylesheet"/>
+    <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+  </script>
+  <script async="" defer="" src="https://www.google.com/recaptcha/api.js">
+  </script>
+  <script>
+   function onSubmit(token) {
           document.getElementById("contact-form").submit();
         }
-      </script>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="/favicon.png">
-</head>
-<body>
-<header class="banner header banner-no-background">
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESI Asia Pacific Pty Ltd"></a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link btn" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/technology">Technology</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/applications">Applications</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link btn" href="/" data-toggle="dropdown">
-                    About Us
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item btn btn-sub" href="/history">History</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <header class="banner-contact header">
-        <div class="banner-text banner-text-contact">
-            <h1>Contact Us</h1>
-        </div>
-    </header>
-</header>
+  </script>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <link href="/favicon.png" rel="icon"/>
+ </head>
+ <body>
+  <header class="banner header banner-contactus">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+     <span class="navbar-toggler-icon">
+     </span>
+    </button>
+    <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/introduction">
+          Introduction
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/townsville">
+          Townsville
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/news">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </div>
+    <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
+   </nav>
+   <div class="banner-text banner-text-contact">
+    <h1>
+     Contact Us
+    </h1>
+   </div>
+  </header>
+ </body>
+</html>
 <main class="content-block">
-    <img src="images/contact-line.png" style="text-align: center">
-    <div class="text-column" style="padding: 0 0 0 0">
-        <h2 style="text-align: center">
-            OUR CONTACT INFO
-        </h2>
-    </div>
-    <div class="contact-page-info">
-        <div class="contact-page-box">
-            <i class="material-icons" style="color: #71b6d5">room</i>
-            <h2>
-                Address
-            </h2>
-            <p>
-                2/11 Morrison Close,
-            </p>
-            <p>
-                Mansfield 4122
-            </p>
-            <p>
-                Queensland
-            </p>
-        </div>
-        <div class="contact-page-box">
-            <i class="material-icons" style="color: #71b6d5">today</i>
-            <h2>
-                Working Time
-            </h2>
-            <p>
-                Monday - Friday &mdash; 08:00 - 16:00
-            </p>
-            <p>
-                Saturday &mdash; Closed
-            </p>
-            <p>
-                Sunday &mdash; Closed
-            </p>
-        </div>
-        <div class="contact-page-box">
-            <i class="material-icons" style="color: #71b6d5">email</i>
-            <h2>
-                Email
-            </h2>
-            <p>
-                info@esiap.com.au
-            </p>
-        </div>
-    </div>
-    <img src="images/mail-line.png" style="text-align: center">
-    <div class="text-column" style="padding: 0 0 0 0">
-        <h2 style="text-align: center">
-            CONTACT FORM
-        </h2>
-    </div>
-    <form id="contact-form" action="https://formspree.io/f/mwkwadkq" class="contact-form" method="POST">
-    	<input class="contact-form-sub mr-auto contact-area" type="text" name="name" placeholder="Name" required>
-        <input class="contact-form-sub contact-area" type="email" name="_replyto" placeholder="Email" required>
-        <textarea rows="5" class="contact-form-main contact-area" type="text" name="message" id="message" placeholder="Message" required></textarea>
-        <input data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" data-callback='onSubmit' class="g-recaptcha contact-form-main contact-form-btn" type="submit" value="Send">
-    </form>
+ <img alt="contact" src="images/contact-line.png" style="text-align: center"/>
+ <div class="text-column" style="padding: 0 0 0 0">
+  <h2 style="text-align: center">
+   OUR CONTACT INFO
+  </h2>
+ </div>
+ <div class="contact-page-info">
+  <div class="contact-page-box">
+   <i class="material-icons" style="color: #71b6d5">
+    room
+   </i>
+   <h2>
+    Address
+   </h2>
+   <p>
+    2/11 Morrison Close,
+   </p>
+   <p>
+    Mansfield 4122
+   </p>
+   <p>
+    Queensland
+   </p>
+  </div>
+  <div class="contact-page-box">
+   <i class="material-icons" style="color: #71b6d5">
+    today
+   </i>
+   <h2>
+    Working Time
+   </h2>
+   <p>
+    Monday - Friday — 08:00 - 16:00
+   </p>
+   <p>
+    Saturday — Closed
+   </p>
+   <p>
+    Sunday — Closed
+   </p>
+  </div>
+  <div class="contact-page-box">
+   <i class="material-icons" style="color: #71b6d5">
+    email
+   </i>
+   <h2>
+    Email
+   </h2>
+   <p>
+    info@esiap.com.au
+   </p>
+  </div>
+ </div>
+ <img alt="mail" src="images/mail-line.png" style="text-align: center"/>
+ <div class="text-column" style="padding: 0 0 0 0">
+  <h2 style="text-align: center">
+   CONTACT FORM
+  </h2>
+ </div>
+ <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
+  <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
+  <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
+  <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
+  <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" type="submit" value="Send"/>
+ </form>
 </main>
 <footer>
-    <section class="contact">
-        <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESI Asia Pacific Pty Ltd"></a>
-            <div class="footer-contacts">
-                <h4 class="contact-text">CONTACT</h4>
-                <div class="icon-row">
-                    <i class="material-icons footer-contact-icon">room</i>
-                    <p class="ml-2">Brisbane, Australia</p>
-                </div>
-                <div class="icon-row">
-                    <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@esiap.com.au</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="footer-background">
-        <div class="footer navbar-expand-lg navbar">
-            <span class="mr-auto">&copy; 2021 All rights reserved.</span>
-            <a class="footer-icon-container" href="https://twitter.com/ess_info">
-                <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png">
-            </a>
-        </div>
-    </section>
+ <section class="contact">
+  <div class="footer-information">
+   <a class="footer-logo" href="/">
+    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+   </a>
+   <div class="footer-contacts">
+    <h4 class="contact-text">
+     CONTACT
+    </h4>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      room
+     </i>
+     <p class="ml-2">
+      Brisbane, Australia
+     </p>
+    </div>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      mail
+     </i>
+     <p class="ml-2">
+      info@esiap.com.au
+     </p>
+    </div>
+   </div>
+  </div>
+ </section>
+ <section class="footer-background">
+  <div class="footer navbar-expand-lg navbar">
+   <span class="mr-auto">
+    © 2022 All rights reserved.
+   </span>
+   <a class="footer-icon-container" href="https://twitter.com/ess_info">
+    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+   </a>
+  </div>
+ </section>
 </footer>
-</body>
-</html>
