--- a/senior.html
+++ b/senior.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Our Team
+   ESI Asia Pacific Pty Ltd
   </title>
   <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
@@ -20,7 +20,7 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-no-background">
+  <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
      <span class="navbar-toggler-icon">
@@ -148,78 +148,42 @@
     </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-   <header class="banner-history header">
-   </header>
-  </header>
-  <main class="content-block history">
-   <div class="our-team-content">
-    <div class="our-team-image-column">
-    </div>
-    <div class="text-column our-team-text-column">
-     <h1>
-      TEAM
-     </h1>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col">
+      <h1>
+       Connect with
+      </h1>
+      <h1>
+       us today!
+      </h1>
+     </div>
     </div>
    </div>
+  </header>
+  <main class="content-block">
    <div class="our-team-content">
     <div class="our-team-image-column">
      <img alt="Peter Morris" class="img-responsive" src="images/Morris.png"/>
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      Peter Morris - CEO
+      Peter Morris
      </h3>
+     <h5>
+      CEO
+     </h5>
      <p>
-      Peter has extensive professional experience in senior corporate office and operational roles in
-                multinational companies (Enron Europe, Conoco, BHP Billiton), government and public entities
-                (Queensland Electricity Commission, Queensland Transmission and Supply Corporation) within the
-                energy and mining sectors. His areas of expertise include marketing and trading, customer
-                relationship and market development, contract negotiation, operations and project management, as
-                well as integration of companies, new businesses and strategies.
+      Peter has extensive professional experience in senior corporate office and operational roles in multinational companies (Enron Europe, Conoco, BHP Billiton), government and public entities (Queensland Electricity Commission, Queensland Transmission and Supply Corporation) within the energy and mining sectors. His areas of expertise include marketing and trading, customer relationship and market development, contract negotiation, operations and project management, as well as integration of companies, new businesses and strategies.
      </p>
      <p>
-      After working exclusively in Australian electricity markets during his early career, he
-                relocated overseas to work in the UK, Netherlands, USA and Singapore over a 12-year period. The
-                business areas were UK and European Power and Gas energy markets; uranium markets in North
-                America and Europe; and worldwide iron ore, coking and steaming coal markets.
+      After working exclusively in Australian electricity markets during his early career, he relocated overseas to work in the UK, Netherlands, USA and Singapore over a 12-year period. The business areas were UK and European Power and Gas energy markets; uranium markets in North America and Europe; and worldwide iron ore, coking and steaming coal markets.
      </p>
      <p>
-      Peter holds a BEng (Electrical and Computer Engineering) and was awarded a PhD from Queensland
-                University of Technology through research investigating successful energy peak demand reduction
-                in a community of 2000 people from a technical, economic and social perspective. He continued
-                his academic research at the University of Queensland in areas of climate change policy and the
-                integration of environmental, economic, and social outcomes.
-     </p>
-    </div>
-   </div>
-   <div class="our-team-content">
-    <div class="our-team-image-column">
-     <img alt="Stuart Parry" class="img-responsive" src="images/Stuart.png"/>
-    </div>
-    <div class="text-column our-team-text-column">
-     <h3>
-      Stuart Parry - Director
-     </h3>
-     <p>
-      Stuart Parry is an internationally experienced executive, lecturer and Chartered Accountant who
-                has a depth of experience across a wide range of public sector and commercial areas including
-                finance, procurement, risk management and strategy.
-     </p>
-     <p>
-      He has worked as an executive across funds management, financial management and financial
-                accounting in Australia, the US and UK. Prior to establishing his own consultancy Stuart worked
-                as a Chartered Accountant with leading global firms including, Ernst &amp; Young, Prudential (UK)
-                Wilhelmsen Investments and Brookfield Asset Management.
-     </p>
-     <p>
-      As an experienced member of international company group audit and risk committees, Stuart has a
-                solid understanding of international finance and accounting issues. He has managed virtual teams
-                focusing on strategic finance and accounting issues for major listed companies in Europe and
-                North America.
-     </p>
-     <p>
-      Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce
-                (Accounting and Economics) from the University of Queensland.
+      Peter holds a BEng (Electrical and Computer Engineering) and was awarded a PhD from Queensland University of Technology through research investigating successful energy peak demand reduction in a community of 2000 people from a technical, economic and social perspective. He continued his academic research at the University of Queensland in areas of climate change policy and the integration of environmental, economic, and social outcomes.
      </p>
     </div>
    </div>
@@ -229,24 +193,16 @@
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      Kevin Mobbs - General Manager of Manufacturing / Director
+      Kevin Mobbs
      </h3>
+     <h5>
+      General Manager of Manufacturing
+     </h5>
      <p>
-      Kevin Mobbs is an experienced Global Executive in the commercial and technical management of
-                large scale and utility grade electrical projects. During his 35 years of experience, Kevin has
-                held Executive roles for Multinational Groups, such as Schneider Electric, and other national
-                groups as CEO, COO in addition to various Directorships.
+      Kevin Mobbs is an experienced Global Executive in the commercial and technical management of large scale and utility grade electrical projects. During his 35 years of experience, Kevin has held Executive roles for Multinational Groups, such as Schneider Electric, and other national groups as CEO, COO in addition to various Directorships.
      </p>
      <p>
-      Kevin has built and led experienced executive teams which have successfully established
-                manufacturing and supply chain capabilities for various new products, as well as optimising
-                processes for existing facilities. These products range from customised and complex electrical
-                power systems to high volume electronic based assemblies. Supply chain sourcing and negotiations
-                also form a key part of Kevin's focus and skills to balance the high risk that exists between
-                supply security, quality and cost efficiencies. This experience combined with extensive and real
-                world experience in generation, distribution and the control of electrical infrastructure and
-                power systems, Kevin is a proven leader in building and managing Executive and Professional
-                Teams for delivering successful outcomes.
+      Kevin has built and led experienced executive teams which have successfully established manufacturing and supply chain capabilities for various new products, as well as optimising processes for existing facilities. These products range from customised and complex electrical power systems to high volume electronic based assemblies. Supply chain sourcing and negotiations also form a key part of Kevin's focus and skills to balance the high risk that exists between supply security, quality and cost efficiencies. This experience combined with extensive and real world experience in generation, distribution and the control of electrical infrastructure and power systems, Kevin is a proven leader in building and managing Executive and Professional Teams for delivering successful outcomes.
      </p>
     </div>
    </div>
@@ -256,26 +212,19 @@
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      Peter Matthews - General Manager of Delivery / Director
+      Peter Matthews
      </h3>
+     <h5>
+      CEO
+     </h5>
      <p>
-      With an extensive career in the Electrical installation and Services Industry, Peter is a highly
-                respected and experienced Executive and Innovator. From small beginnings in 2009, with a focus
-                on delivery and quality, Peter has founded and developed the National Deployment and Services
-                company. Solar Service Guys, which is the largest specialist national group of its type.
+      With an extensive career in the Electrical installation and Services Industry, Peter is a highly respected and experienced Executive and Innovator. From small beginnings in 2009, with a focus on delivery and quality, Peter has founded and developed the National Deployment and Services company. Solar Service Guys, which is the largest specialist national group of its type.
      </p>
      <p>
-      Peter's success can be demonstrated through having National contracts for the provision of
-                specialist electrical services and installations to National Energy Retailers, International
-                Technology Manufacturers and other major industry partners.
+      Peter's success can be demonstrated through having National contracts for the provision of specialist electrical services and installations to National Energy Retailers, International Technology Manufacturers and other major industry partners.
      </p>
      <p>
-      Peter has refined his expertise in the Renewables field and has invested into engineering and IT
-                systems. This investment and Leadership has resulted in long term relationships and partnerships
-                with key manufactures including ABB, Canadian Solar, SMA, LG Chem, Trina and national retailing
-                and energy grid clients such as Origin, ERM, Red Energy, Energy Queensland, and Light Source BP.
-                As a highly respected Leader and award-winning Entrepreneur, Peter is a member on the Advisory
-                Board of the Master Electricians of Australia and also advises other major industry groups.
+      Peter has refined his expertise in the Renewables field and has invested into engineering and IT systems. This investment and Leadership has resulted in long term relationships and partnerships with key manufactures including ABB, Canadian Solar, SMA, LG Chem, Trina and national retailing and energy grid clients such as Origin, ERM, Red Energy, Energy Queensland, and Light Source BP. As a highly respected Leader and award-winning Entrepreneur, Peter is a member on the Advisory Board of the Master Electricians of Australia and also advises other major industry groups.
      </p>
     </div>
    </div>
@@ -285,8 +234,11 @@
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      lan Connor - CTO
+      Ian Connor
      </h3>
+     <h5>
+      Chief Technology Officer (CTO)
+     </h5>
      <p>
       Ian is an experienced CTO and entrepreneur. He has spent over 20 years in the USA, Europe and Australia, refining and implementing processes required to build software and manage software teams the right way.
      </p>
