--- a/solutions.html
+++ b/solutions.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   Applications
+   ESI Asia Pacific Pty Ltd
   </title>
   <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
   </script>
@@ -20,7 +20,7 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner header banner-no-background">
+  <header class="banner banner-product header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
      <span class="navbar-toggler-icon">
@@ -148,88 +148,93 @@
     </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-   <header class="banner-applications header">
-   </header>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     </div>
+     <div class="col">
+      <h1>
+       Our renewable
+       <br/>
+       energy future
+      </h1>
+      <h1>
+       — today
+      </h1>
+     </div>
+    </div>
+   </div>
   </header>
   <main class="content-block">
-   <div class="banner-text banner-text-applications">
+   <div class="chemistry-header">
     <h1>
-     Utilities
-    </h1>
-   </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     HELPING UTILITIES REAP THE REWARDS OF RENEWABLE ENERGY
+     Environment, Social and Governance
     </h1>
     <p>
-     At ESI Asia Pacific Pty Ltd., we're encouraged by the increased amount of renewable energy penetration across the grid. We
-            know that, with wind and solar energy storage deployments growing up to 46% year-over-year, electric
-            utilities need alternatives to lithium-ion that are clean, resilient and have long operating lifetimes and
-            are not cycle limited. Our iron flow battery solutions, the Energy Warehouse™ (EW) and Energy
-            Center™ (EC) offer more than double the operating lifetime and cycle capacity of lithium-ion battery
-            storage systems, with a non-flammable chemistry and minimal maintenance requirements.
-    </p>
-    <p>
-     The EC™ is a "battery-in-a-building" platform based on the same second generation power module used in
-            the EW™ with a design approach that enables systems to be tailored to meet virtually any project size
-            with storage durations ranging up to 16+ hours. Its wide-ranging capabilities can help utilities deal with
-            high penetration of intermittent renewables, resiliency requirements and defer major capital expenditures on
-            distribution equipment by time shifting energy. Utilities can easily communicate with ESI Asia Pacific Pty Ltd's storage
-            system solutions installed at end-user sites to dynamically manage customer electricity consumption from the
-            grid in response to real-time electricity supplies. Our innovative energy storage solutions also help with
-            frequency regulation and other ancillary services and, furthermore, can reduce a utility's dependence on
-            fossil fuel generation plants, shifting to a more sustainable model over time.
+     The modular design of our products allows for ESI to deliver across multiple industry uses:
     </p>
    </div>
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Commercial &amp; Industrial (C&amp;I)
-    </h1>
+   <div class="row">
+    <div class="col-md-4">
+     <img alt="Utility" class="img-responsive" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Utility
+     </h3>
+     <p>
+      Large scale installations of medium duration (10 hour) storage from 20MW to 1GW integrating into existing
+                Transmission connections enabling an orderly transition from fossil fuel generation to Renewable sources
+     </p>
+    </div>
    </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     CLEAN ENERGY STORAGE SHIFTS THE POWER INTO YOUR HANDS
-    </h1>
-    <p>
-     Energy is a significant operating expense that needs to be minimized to improve a company's bottom line. At
-            ESI Asia Pacific Pty Ltd., we believe that proactively addressing this in a sustainable way is just smart business. If you're
-            looking to utilize renewable energy to support your brand and lower costs, long-duration energy storage may
-            be the solution for you. Whether it is managing the self-supply of intermittent solar or wind energy,
-            maximizing savings from existing utility tariffs for demand charges and time-of-use rates, or protecting
-            your facility's energy security from grid outages, an economical, long-duration energy storage solution can
-            give you control of your distributed energy resources.
-    </p>
+   <div class="row">
+    <div class="col-md-4">
+     <img alt="Transmission" class="img-responsive" src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Transmission/Distribution
+     </h3>
+     <p>
+      the advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
+                points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
+                distributed and transmission renewable penetration.
+     </p>
+    </div>
    </div>
-   <div class="banner-text banner-text-applications">
-    <h1>
-     Off Grid &amp; Microgrid
-    </h1>
+   <div class="row">
+    <div class="col-md-4">
+     <img alt="Commercial" class="img-responsive" src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Commercial and industrial
+     </h3>
+     <p>
+      Localised generation will be a key part of a clean energy grid. Large scale commercial and industrial users are
+                able to take control of their energy costs via small scale generation and accompanying storage. ESI’s modular
+                product allows for all Commercial and Industrial (from small to large) users to limit their draw from the grid.
+                Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.
+     </p>
+    </div>
    </div>
-   <div class="text-column">
-    <h1 style="text-align: center">
-     SAFE, FLEXIBLE &amp; EFFICIENT ENERGY INDEPENDENCE FOR COMPANIES &amp; COMMUNITIES
-    </h1>
-    <p>
-     Many remote locations are forced to rely on power from diesel generators which comes with significant cost,
-            maintenance requirements, noise and negative environmental impact. Microgrids can help communities become
-            energy independent and in many cases more environmentally friendly. Renewables plus energy storage can act
-            as the baseload power source of a microgrid and reduce the use of costly fuel generators.
-    </p>
-    <p>
-     As more remote locations move toward renewable energy adoption, our EW™ becomes an ideal solution for
-            renewables integration with minimal environmental impact. The EW™ can help reduce costs, and
-            sometimes save lives if used for a military setting, because it can be transported in a dry state and
-            activated on site by adding water.
-    </p>
-    <br/>
-    <h1 style="text-align: center">
-     PV AND WIND SHIFTING
-    </h1>
-    <p>
-     With long-duration storage, you can store excess renewables production and shift energy to when it has
-            greater economic value. Long-duration and multi-cycle energy storage can smooth and shift renewables towards
-            becoming the new baseload energy solution.
-    </p>
+   <div class="row">
+    <div class="col-md-4">
+     <img alt="Rural" class="img-responsive" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
+    </div>
+    <div class="col-md-8 chemistry-header">
+     <h3>
+      Rural, Remote and Island
+     </h3>
+     <p>
+      De-carbonisation of the rural, remote and Island networks are an integral part of a zero carbon emission grid.
+                Scalable stand alone power systems that can integrate renewable generation, storage, load management
+                systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
+                adapted to meet the largest to the smallest of load requirements.
+     </p>
+    </div>
    </div>
   </main>
   <footer>
