inline text css for our-team content mobile version

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
      </p>
      <p>
-      By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
+      By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
      </p>
     </div>
     <div class="col-md-6">
