--- a/introduction.html
+++ b/introduction.html
@@ -170,7 +170,7 @@
     </h1>
    </div>
    <p>
-    The DESS technology chosen is from ESS,Inc (NYSE:GWH) a Portland, US based company, producing an Iron-  Flow battery. The device consists of iron, salt and water chemistry and can be either deployed in containers or  in a large scale grid connected warehouse.
+    ESIAP will deliver from its Australian facilities Iron Flow batteries. The device consists of iron, salt and water chemistry and can be either deployed in containers or in a large scale grid connected warehouse.
    </p>
    <div class="text-column chemistry-header">
     <h3>
