--- a/senior.html
+++ b/senior.html
@@ -166,15 +166,31 @@
   </header>
   <main class="content-block">
    <div class="our-team-content">
+    <div class="our-team-image-column ">
+     <img alt="Stuart Parry" class="img-responsive " src="images/Stuart.png"/>
+    </div>
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/Stuart.png">
+     <h3>
+      Stuart Parry
+     </h3>
+     <h5>
+      Managing Director
+     </h5>
+     <p></p>
+   </div>
+   </div>
+   <div class="our-team-content">
     <div class="our-team-image-column">
      <img alt="Peter Morris" class="img-responsive" src="images/Morris.png"/>
     </div>
-    <div class="text-column our-team-text-column">
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/Morris.png">
      <h3>
       Peter Morris
      </h3>
      <h5>
-      CEO
+      Commercial
      </h5>
      <p>
       Peter has extensive professional experience in senior corporate office and operational roles in multinational companies (Enron Europe, Conoco, BHP Billiton), government and public entities (Queensland Electricity Commission, Queensland Transmission and Supply Corporation) within the energy and mining sectors. His areas of expertise include marketing and trading, customer relationship and market development, contract negotiation, operations and project management, as well as integration of companies, new businesses and strategies.
@@ -187,48 +203,8 @@
      </p>
     </div>
    </div>
-   <div class="our-team-content">
-    <div class="our-team-image-column">
-     <img alt="Kevin Mobbs" class="img-responsive" src="images/Kevin.png"/>
-    </div>
-    <div class="text-column our-team-text-column">
-     <h3>
-      Kevin Mobbs
-     </h3>
-     <h5>
-      General Manager of Manufacturing
-     </h5>
-     <p>
-      Kevin Mobbs is an experienced Global Executive in the commercial and technical management of large scale and utility grade electrical projects. During his 35 years of experience, Kevin has held Executive roles for Multinational Groups, such as Schneider Electric, and other national groups as CEO, COO in addition to various Directorships.
-     </p>
-     <p>
-      Kevin has built and led experienced executive teams which have successfully established manufacturing and supply chain capabilities for various new products, as well as optimising processes for existing facilities. These products range from customised and complex electrical power systems to high volume electronic based assemblies. Supply chain sourcing and negotiations also form a key part of Kevin's focus and skills to balance the high risk that exists between supply security, quality and cost efficiencies. This experience combined with extensive and real world experience in generation, distribution and the control of electrical infrastructure and power systems, Kevin is a proven leader in building and managing Executive and Professional Teams for delivering successful outcomes.
-     </p>
-    </div>
-   </div>
-   <div class="our-team-content">
-    <div class="our-team-image-column">
-     <img alt="Peter Matthews" class="img-responsive" src="images/Mathews.png"/>
-    </div>
-    <div class="text-column our-team-text-column">
-     <h3>
-      Peter Matthews
-     </h3>
-     <h5>
-      CEO
-     </h5>
-     <p>
-      With an extensive career in the Electrical installation and Services Industry, Peter is a highly respected and experienced Executive and Innovator. From small beginnings in 2009, with a focus on delivery and quality, Peter has founded and developed the National Deployment and Services company. Solar Service Guys, which is the largest specialist national group of its type.
-     </p>
-     <p>
-      Peter's success can be demonstrated through having National contracts for the provision of specialist electrical services and installations to National Energy Retailers, International Technology Manufacturers and other major industry partners.
-     </p>
-     <p>
-      Peter has refined his expertise in the Renewables field and has invested into engineering and IT systems. This investment and Leadership has resulted in long term relationships and partnerships with key manufactures including ABB, Canadian Solar, SMA, LG Chem, Trina and national retailing and energy grid clients such as Origin, ERM, Red Energy, Energy Queensland, and Light Source BP. As a highly respected Leader and award-winning Entrepreneur, Peter is a member on the Advisory Board of the Master Electricians of Australia and also advises other major industry groups.
-     </p>
-    </div>
-   </div>
-   <div class="our-team-content">
+
+   <s class="our-team-content">
     <div class="our-team-image-column">
      <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>
     </div>
@@ -252,7 +228,7 @@
       Software Skills: Python, C/C++, Tensorflow, AWS, git, DevOps, Typescript, Javascript, Java, and a big fan of continuous integration, testing frameworks, static analysis, electronics, and agile development. Specialties: scientific and artificial intelligence software development. Ian holds degrees in Physics/Maths and Law.
      </p>
     </div>
-   </div>
+   </s>
   </main>
   <footer>
    <section class="contact">
