added stuart text because it was weird being empty

--- a/senior.html
+++ b/senior.html
@@ -177,7 +177,18 @@
      <h5>
       Managing Director
      </h5>
-     <p></p>
+     <p>
+      Stuart is an internationally experienced executive, lecturer and Chartered Accountant who has a depth of experience across a wide range of public sector and commercial areas including finance, procurement, risk management and strategy.
+     </p>
+     <p>
+      He has worked as an executive across funds management, financial management and financial accounting in Australia, the US and UK. Prior to establishing his own consultancy Stuart worked as a Chartered Accountant with leading global firms including Ernst &amp; Young, Prudential (UK) Wilhelmsen Investments and Brookfield Asset Management.
+     </p>
+     <p>
+      As an experienced member of international company group audit and risk committees, Stuart has a solid understanding of international finance and accounting issues. He has managed virtual teams focusing on strategic finance and accounting issues for major listed companies in Europe and North America.
+     </p>
+     <p>
+      Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce (Accounting and Economics) from the University of Queensland.
+     </p>
    </div>
    </div>
    <div class="our-team-content">
