--- a/chemistry.html
+++ b/chemistry.html
@@ -166,12 +166,12 @@
   <main class="content-block">
    <div class="text-column chemistry-header">
     <h1>
-     Technology Overveiw
+     Technology Overview
     </h1>
    </div>
    <div class="text-column">
     <p>
-     The DESS technology chosen is from ESS,Inc (NYSE:GWH) a Portland, US based company, producing an Iron-  Flow battery. The device consists of iron, salt and water chemistry and can _be either deployed in containers or  in a large scale grid connected warehouse.
+     The Iron Flow battery consists of iron, salt and water chemistry and can be either deployed in containers or in a large-scale grid-connected warehouse.
     </p>
    </div>
    <div class="text-column chemistry-header">
@@ -191,18 +191,6 @@
       Electrical energy drives chemical change in the electrolyte, which flows through electrochemical cell
      </li>
     </ul>
-    <p>
-     During charging:
-    </p>
-    <p>
-     \(\ce{Fe^{II}Cl2 + 2e- &lt;-&gt; Fe + 2Cl-}\) -0.44V (negative electrode)
-    </p>
-    <p>
-     \(\ce{2Fe^{II}Cl2 + Cl- &lt;-&gt; 2Fe^{III}Cl3 + 2e-}\) +0.77V (positive electrode)
-    </p>
-    <p>
-     During discharge: 	equations reverse
-    </p>
     <img alt="Iron Flow Chemistry" class="img-fluid" src="images/Chemistry.jpg"/>
    </div>
   </main>
