--- a/transition.html
+++ b/transition.html
@@ -171,7 +171,7 @@
     <p>
      ESI’s technology is transforming the value proposition for long duration energy storage.
     </p>
-    <img alt="Features and advantages" class="img-fluid" src="images/Energy Trans-Table.jpg"/>
+    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>
    </div>
   </main>
   <footer>
